--- a/index.html
+++ b/index.html
@@ -356,6 +356,9 @@
                     <input type="text" placeholder="SUBSCRIBE | Your email">
                     <a href="#"><button><i class="fas fa-long-arrow-alt-right"></i></button></a>
                 </div>
+                <div class="about__btn">
+                    <a href="#"><button><i class="fas fa-chevron-up"></i></button></a>
+                </div>
             </div>
         </section>
     <!-- footer -->
